<resources>
    <string name="app_name">ContactsApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="hint_name">Name</string>
    <string name="hint_number">Number</string>
    <string name="hint_email">Email (Optional)</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_dial">Dial</string>
    <string name="button_email">Email</string>
    <string name="no_email">Can\'t send an email. Contact does not contain an email address.</string>
    <string name="empty_not_saved">Contact not saved. Please check if Name and Number field is not empty. </string>
    <string name="update_failed">Failed to update contact. Please try again.</string>
    <string name="clear_all_data">Delete all records.</string>
</resources>