<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/screenBG"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/edit_name"
        style="@style/text_view_style"
        android:hint="@string/hint_name"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_number"
        style="@style/text_view_style"
        android:hint="@string/hint_number"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/edit_email"
        style="@style/text_view_style"
        android:hint="@string/hint_email"
        android:inputType="textAutoComplete" />

    <Button
        android:id="@+id/button_save"
        style="@style/ButtonStyle"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/button_dial"
        style="@style/ButtonStyle"
        android:text="@string/button_dial" />

    <Button
        android:id="@+id/button_email"
        style="@style/ButtonStyle"
        android:text="@string/button_email" />

    <Button
        android:id="@+id/button_cancel"
        style="@style/ButtonStyle"
        android:backgroundTint="@color/red"
        android:text="@string/button_cancel" />
</LinearLayout>
